@@ -7,12 +7,10 @@ import com.intellij.diff.chains.DiffRequestChain;
 import com.intellij.diff.chains.DiffRequestProducerException;
 import com.intellij.diff.util.DiffUserDataKeysEx;
 import com.intellij.openapi.ListSelection;
-import com.intellij.openapi.actionSystem.ActionPlaces;
-import com.intellij.openapi.actionSystem.AnActionEvent;
-import com.intellij.openapi.actionSystem.AnActionExtensionProvider;
-import com.intellij.openapi.actionSystem.CommonDataKeys;
+import com.intellij.openapi.actionSystem.*;
 import com.intellij.openapi.project.Project;
 import com.intellij.openapi.vcs.FilePath;
+import com.intellij.openapi.vcs.VcsDataKeys;
 import com.intellij.openapi.vcs.changes.*;
 import com.intellij.openapi.vcs.changes.ui.ChangeDiffRequestChain;
 import com.intellij.openapi.vcs.changes.ui.ChangeDiffRequestChain.Producer;
@@ -26,11 +24,15 @@ import org.jetbrains.annotations.Nullable;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.concurrent.ExecutionException;
-import java.util.stream.Collectors;
 
 import static com.intellij.openapi.vcs.changes.actions.diff.lst.LocalChangeListDiffTool.ALLOW_EXCLUDE_FROM_COMMIT;
 
 public class ShowDiffFromLocalChangesActionProvider implements AnActionExtensionProvider {
+  @Override
+  public @NotNull ActionUpdateThread getActionUpdateThread() {
+    return ActionUpdateThread.BGT;
+  }
+
   @Override
   public boolean isActive(@NotNull AnActionEvent e) {
     return e.getData(ChangesListView.DATA_KEY) != null;
@@ -43,14 +45,13 @@ public class ShowDiffFromLocalChangesActionProvider implements AnActionExtension
 
   public static void updateAvailability(@NotNull AnActionEvent e) {
     Project project = e.getData(CommonDataKeys.PROJECT);
-    ChangesListView view = e.getData(ChangesListView.DATA_KEY);
-    if (view == null) {
+    if (e.getData(ChangesListView.DATA_KEY) == null) {
       e.getPresentation().setEnabled(false);
       return;
     }
 
-    JBIterable<Change> changes = view.getSelectedChanges();
-    JBIterable<FilePath> unversionedFiles = view.getSelectedUnversionedFiles();
+    JBIterable<Change> changes = JBIterable.of(e.getData(VcsDataKeys.CHANGES));
+    JBIterable<FilePath> unversionedFiles = JBIterable.from(e.getData(ChangesListView.UNVERSIONED_FILE_PATHS_DATA_KEY));
 
     if (ActionPlaces.MAIN_MENU.equals(e.getPlace())) {
       e.getPresentation().setEnabled(project != null && (changes.isNotEmpty() || unversionedFiles.isNotEmpty()));
@@ -109,7 +110,7 @@ public class ShowDiffFromLocalChangesActionProvider implements AnActionExtension
     else {
       ListSelection<Producer> producers = collectRequestProducers(project, changes, unversioned, view);
       if (producers.isEmpty()) return;
-      chain = new ChangeDiffRequestChain(producers.getList(), producers.getSelectedIndex());
+      chain = new ChangeDiffRequestChain(producers);
     }
 
     chain.putUserData(DiffUserDataKeysEx.LAST_REVISION_WITH_LOCAL, true);
@@ -146,9 +147,9 @@ public class ShowDiffFromLocalChangesActionProvider implements AnActionExtension
 
   @NotNull
   public static ListSelection<Producer> collectRequestProducers(@NotNull Project project,
-                                                                 @NotNull List<? extends Change> changes,
-                                                                 @NotNull List<? extends FilePath> unversioned,
-                                                                 @NotNull ChangesListView changesView) {
+                                                                @NotNull List<? extends Change> changes,
+                                                                @NotNull List<? extends FilePath> unversioned,
+                                                                @NotNull ChangesListView changesView) {
     if (changes.size() == 1 && unversioned.isEmpty()) { // show all changes from this changelist
       Change selectedChange = changes.get(0);
       List<Change> selectedChanges = changesView.getAllChangesFromSameChangelist(selectedChange);
@@ -164,14 +165,15 @@ public class ShowDiffFromLocalChangesActionProvider implements AnActionExtension
 
     if (unversioned.size() == 1 && changes.isEmpty()) { // show all unversioned changes
       FilePath selectedFile = unversioned.get(0);
-      List<FilePath> allUnversioned = changesView.getUnversionedFiles().collect(Collectors.toList());
+      List<FilePath> allUnversioned = changesView.getUnversionedFiles().toList();
       int selectedIndex = allUnversioned.indexOf(selectedFile);
       return createUnversionedProducers(project, allUnversioned, selectedIndex);
     }
 
     ListSelection<Producer> changeProducers = createChangeProducers(project, changes, 0);
     ListSelection<Producer> unversionedProducers = createUnversionedProducers(project, unversioned, 0);
-    return ListSelection.createAt(ContainerUtil.concat(changeProducers.getList(), unversionedProducers.getList()), 0);
+    return ListSelection.createAt(ContainerUtil.concat(changeProducers.getList(), unversionedProducers.getList()), 0)
+      .asExplicitSelection();
   }
 
   private static ListSelection<Producer> createChangeProducers(@NotNull Project project,
